--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "twotter",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "core-js": "^3.8.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongodb": "^4.7.0",
+    "mongoose": "^6.4.0",
     "node-sass": "^7.0.1",
     "sass-loader": "^13.0.0",
     "vue": "^3.2.13",
@@ -24,7 +32,8 @@
     "@vue/cli-plugin-vuex": "^5.0.6",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "nodemon": "^2.0.16"
   },
   "eslintConfig": {
     "root": true,
